@@ -20,8 +20,10 @@
 package net.sourceforge.atunes.gui.views.dialogs;
 
 import java.awt.Component;
-import java.awt.Dimension;
+import java.awt.FlowLayout;
+import java.awt.GridBagConstraints;
 import java.awt.GridBagLayout;
+import java.awt.Insets;
 import java.util.List;
 
 import javax.swing.BorderFactory;
@@ -34,34 +36,18 @@ import javax.swing.ScrollPaneConstants;
 import javax.swing.WindowConstants;
 
 import net.sourceforge.atunes.gui.views.controls.CustomFrame;
+import net.sourceforge.atunes.gui.views.controls.ScrollableFlowPanel;
 import net.sourceforge.atunes.kernel.modules.repository.model.Artist;
 import net.sourceforge.atunes.utils.GuiUtils;
 import net.sourceforge.atunes.utils.I18nUtils;
 
-/**
- * The Class CoverNavigatorFrame.
- */
 public class CoverNavigatorFrame extends CustomFrame {
 
     private static final long serialVersionUID = -1744765531225480303L;
 
-    /** The list. */
     private JList list;
-
-    /** The covers panel. */
     private JPanel coversPanel;
-
-    /** The covers button. */
     private JButton coversButton;
-
-    /** The width. */
-    private static int width = GuiUtils.getComponentWidthForResolution(1280, 1150);
-
-    /** The height. */
-    private static int height = GuiUtils.getComponentHeightForResolution(1024, 650);
-
-    /** The covers scroll pane width. */
-    private int coversScrollPaneWidth = (int) (width * 0.7) - 50;
 
     /**
      * Instantiates a new cover navigator frame.
@@ -70,10 +56,9 @@ public class CoverNavigatorFrame extends CustomFrame {
      *            the artists
      */
     public CoverNavigatorFrame(List<Artist> artists, Component owner) {
-        super(I18nUtils.getString("COVER_NAVIGATOR"), width, height, owner);
+        super(I18nUtils.getString("COVER_NAVIGATOR"), GuiUtils.getComponentWidthForResolution(1280, 850), GuiUtils.getComponentHeightForResolution(1024, 650), owner);
         setDefaultCloseOperation(WindowConstants.DISPOSE_ON_CLOSE);
         setContent(artists);
-        setResizable(false);
         GuiUtils.applyComponentOrientation(this);
         enableCloseActionWithEscapeKey();
     }
@@ -97,15 +82,6 @@ public class CoverNavigatorFrame extends CustomFrame {
     }
 
     /**
-     * Gets the covers scroll pane width.
-     * 
-     * @return the coversScrollPaneWidth
-     */
-    public int getCoversScrollPaneWidth() {
-        return coversScrollPaneWidth;
-    }
-
-    /**
      * Gets the list.
      * 
      * @return the list
@@ -121,31 +97,40 @@ public class CoverNavigatorFrame extends CustomFrame {
      *            the new content
      */
     private void setContent(List<Artist> artists) {
-        JPanel panel = new JPanel(null);
+        JPanel panel = new JPanel(new GridBagLayout());
 
-        coversPanel = new JPanel(new GridBagLayout());
+        coversPanel = new ScrollableFlowPanel();
+        coversPanel.setLayout(new FlowLayout());
 
         list = new JList(artists.toArray());
         list.setSelectionMode(ListSelectionModel.SINGLE_SELECTION);
 
         JScrollPane listScrollPane = new JScrollPane(list);
-        listScrollPane.setLocation(10, 10);
-        listScrollPane.setSize((int) (width * 0.3), height - 50);
 
         JScrollPane coversScrollPane = new JScrollPane(coversPanel);
         coversScrollPane.setBorder(BorderFactory.createLineBorder(GuiUtils.getBorderColor()));
-        coversScrollPane.setLocation(10 + (int) (width * 0.3) + 20, 10);
-        coversScrollPane.setSize(coversScrollPaneWidth, height - 90);
         coversScrollPane.setHorizontalScrollBarPolicy(ScrollPaneConstants.HORIZONTAL_SCROLLBAR_NEVER);
         coversScrollPane.getVerticalScrollBar().setUnitIncrement(20);
 
         coversButton = new JButton(I18nUtils.getString("GET_COVERS"));
-        coversButton.setSize(new Dimension(150, 25));
-        coversButton.setLocation(10 + (int) (width * 0.3) + 20, height - 70);
 
-        panel.add(listScrollPane);
-        panel.add(coversScrollPane);
-        panel.add(coversButton);
+        GridBagConstraints c = new GridBagConstraints();
+        c.gridx = 0;
+        c.gridy = 0;
+        c.insets = new Insets(5, 5, 5, 5);
+        c.weighty = 1;
+        c.fill = GridBagConstraints.VERTICAL;
+        panel.add(listScrollPane, c);
+        c.gridx = 1;
+        c.gridy = 0;
+        c.weightx = 0.8;
+        c.fill = GridBagConstraints.BOTH;
+        panel.add(coversScrollPane, c);
+        c.gridx = 1;
+        c.gridy = 1;
+        c.weighty = 0;
+        c.fill = GridBagConstraints.NONE;
+        panel.add(coversButton, c);
 
         add(panel);
     }
